blrlblelrlrl
/home/pi/midiMind/backend/src/main.cpp:234:18: warning: missing terminating " character
  234 |               << "  -V, --version        Show version\
      |                  ^
/home/pi/midiMind/backend/src/main.cpp:234:18: error: missing terminating " character
  234 |               << "  -V, --version        Show version\
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/pi/midiMind/backend/src/core/../api/ApiServer.h:30,
                 from /home/pi/midiMind/backend/src/core/Application.cpp:49:
/home/pi/midiMind/backend/src/core/../api/MessageEnvelope.h:29:10: fatal error: Protocol.h: No such file or directory
   29 | #include "Protocol.h"
      |          ^~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:93: CMakeFiles/midimind.dir/src/core/Application.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/pi/midiMind/backend/src/core/EventBus.cpp:20:
/home/pi/midiMind/backend/src/core/EventBus.h:134:45: error: return type ‘class midiMind::Subscription’ is incomplete
  134 |                           int priority = 0) {
      |                                             ^
/home/pi/midiMind/backend/src/core/EventBus.h:181:45: error: return type ‘class midiMind::Subscription’ is incomplete
  181 |                           int priority = 0) {
      |                                             ^
make[2]: *** [CMakeFiles/midimind.dir/build.make:107: CMakeFiles/midimind.dir/src/core/EventBus.cpp.o] Error 1
/home/pi/midiMind/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/pi/midiMind/backend/src/main.cpp:166:18: error: ‘std::this_thread’ has not been declared
  166 |             std::this_thread::sleep_for(std::chrono::seconds(1));
      |                  ^~~~~~~~~~~
/home/pi/midiMind/backend/src/main.cpp: In function ‘void printUsage(const char*)’:
/home/pi/midiMind/backend/src/main.cpp:234:17: error: expected primary-expression at end of input
  234 |               << "  -V, --version        Show version\
      |                 ^
/home/pi/midiMind/backend/src/main.cpp:234:17: error: expected ‘}’ at end of input
/home/pi/midiMind/backend/src/main.cpp:224:42: note: to match this ‘{’
  224 | void printUsage(const char* programName) {
      |                                          ^
make[2]: *** [CMakeFiles/midimind.dir/build.make:79: CMakeFiles/midimind.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
